@@ -4,6 +4,7 @@ xxxx-xx-xx: Revelation 0.4.5
 New features:
 - added Password Safe 2.x import/export
 - added Password Safe 1.x import/export
+- added MyPasswordSafe import/export
 - added Password Gorilla import/export
 
 Bugfixes:
