@@ -12,6 +12,8 @@ Revelation changelog
 
 	* added Password Gorilla import/export
 
+	* added MyPasswordSafe import/export
+
 2005-08-17  Erik Grinaker <erikg@codepoet.no>
 
 	* default lock timeout for applet set to 10 minutes
